--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <groupId>org.smartloli.kafka.eagle</groupId>
     <artifactId>efak</artifactId>
     <packaging>pom</packaging>
-    <version>2.0.7</version>
+    <version>${project.version}</version>
     <name>ke</name>
     <url>https://repo1.maven.org/maven2/</url>
 
     <properties>
-        <project.version>2.0.7</project.version>
+        <project.version>2.0.8</project.version>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
