add kraft plugin

--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -18,6 +18,13 @@ cluster4.zk.acl.username=test
 cluster4.zk.acl.password=test123
 
 ######################################
+# kraft broker
+######################################
+efak.kafka.cluster.alias=cluster1
+cluster1.efak.bootstrap.servers=127.0.0.1:9092
+
+
+######################################
 # broker size online list
 ######################################
 cluster1.efak.broker.size=10
