load znode data into memory

--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -21,7 +21,7 @@ cluster4.zk.acl.password=test123
 # kraft broker
 ######################################
 efak.kafka.cluster.alias=cluster1
-cluster1.efak.bootstrap.servers=127.0.0.1:9092
+#cluster1.efak.bootstrap.servers=
 
 
 ######################################
