add distributed strategy

--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -42,6 +42,12 @@ kafka.zk.limit.size=32
 efak.webui.port=8048
 
 ######################################
+# EFAK enable distributed
+######################################
+efak.distributed.enable=false
+efak.cluster.mode.status=master
+
+######################################
 # kafka jmx acl and ssl authenticate
 ######################################
 cluster1.efak.jmx.acl=false
