add efak distributed cluster mode

--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -44,8 +44,11 @@ efak.webui.port=8048
 ######################################
 # EFAK enable distributed
 ######################################
-efak.distributed.enable=false
-efak.cluster.mode.status=master
+efak.distributed.enable=true
+efak.cluster.mode.status=slave
+efak.worknode.master.host=192.168.31.199
+#efak.worknode.master.host=192.168.31.127
+efak.worknode.port=8085
 
 ######################################
 # kafka jmx acl and ssl authenticate
@@ -136,7 +139,7 @@ cluster1.efak.ssl.cgroup.topics=
 # kafka jdbc driver address
 ######################################
 efak.driver=com.mysql.cj.jdbc.Driver
-efak.url=jdbc:mysql://127.0.0.1:3306/ke_dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+efak.url=jdbc:mysql://192.168.31.127:3306/ke_prd?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 efak.username=root
 efak.password=123456
 #efak.driver=org.sqlite.JDBC
