add zkclient idle monitor

--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -4,7 +4,6 @@
 ######################################
 efak.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
-cluster1_0_1.zk.list=127.0.0.1:2181/v_1_0_1
 cluster2.zk.list=127.0.0.1:2181/plain
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=127.0.0.1:2182
@@ -34,7 +33,7 @@ cluster4.efak.broker.size=10
 ######################################
 # zk client thread limit
 ######################################
-kafka.zk.limit.size=16
+kafka.zk.limit.size=8
 
 ######################################
 # EFAK webui port
@@ -44,11 +43,12 @@ efak.webui.port=8048
 ######################################
 # EFAK enable distributed
 ######################################
-efak.distributed.enable=true
+efak.distributed.enable=false
 efak.cluster.mode.status=slave
 efak.worknode.master.host=192.168.31.199
 #efak.worknode.master.host=192.168.31.127
 efak.worknode.port=8085
+efak.worknode.address.path=/Users/dengjie/workspace/kafka-eagle-plus/efak-common/src/main/resources/works
 
 ######################################
 # kafka jmx acl and ssl authenticate
@@ -84,7 +84,7 @@ efak.metrics.retain=15
 ######################################
 # master quartz time
 ######################################
-efak.quartz.master.time=* */1 * * * ?
+#efak.quartz.master.time=* */1 * * * ?
 
 ######################################
 # kafka sql topic records max
@@ -139,7 +139,7 @@ cluster1.efak.ssl.cgroup.topics=
 # kafka jdbc driver address
 ######################################
 efak.driver=com.mysql.cj.jdbc.Driver
-efak.url=jdbc:mysql://192.168.31.127:3306/ke_prd?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+efak.url=jdbc:mysql://192.168.31.127:3306/ke_dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 efak.username=root
 efak.password=123456
 #efak.driver=org.sqlite.JDBC
