--- a/efak-web/src/main/resources/conf/system-config.properties
+++ b/efak-web/src/main/resources/conf/system-config.properties
@@ -30,6 +30,14 @@ kafka.zk.limit.size=32
 efak.webui.port=8048
 
 ######################################
+# EFAK enable distributed
+######################################
+efak.distributed.enable=false
+efak.cluster.mode.status=master
+efak.worknode.master.host=localhost
+efak.worknode.port=8085
+
+######################################
 # kafka jmx acl and ssl authenticate
 ######################################
 cluster1.efak.jmx.acl=false
