fixed efak distributed cluster ke.sh script

--- a/efak-web/src/main/resources/conf/system-config.properties
+++ b/efak-web/src/main/resources/conf/system-config.properties
@@ -113,16 +113,16 @@ cluster3.efak.ssl.cgroup.topics=
 ######################################
 # kafka sqlite jdbc driver address
 ######################################
-efak.driver=org.sqlite.JDBC
-efak.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
-efak.username=root
-efak.password=www.kafka-eagle.org
+#efak.driver=org.sqlite.JDBC
+#efak.url=jdbc:sqlite:/hadoop/kafka-eagle/db/ke.db
+#efak.username=root
+#efak.password=www.kafka-eagle.org
 
 ######################################
 # kafka mysql jdbc driver address
 ######################################
-#efak.driver=com.mysql.cj.jdbc.Driver
-#efak.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-#efak.username=root
-#efak.password=123456
+efak.driver=com.mysql.cj.jdbc.Driver
+efak.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+efak.username=root
+efak.password=123456
 
