--- a/efak-web/src/main/resources/kms/conf/catalina.properties
+++ b/efak-web/src/main/resources/kms/conf/catalina.properties
@@ -115,10 +115,9 @@ aspectj*.jar,\
 bootstrap.jar,\
 catalina-ant.jar,\
 catalina-ha.jar,\
-catalina-jmx-remote.jar,\
+catalina-ssi.jar,\
 catalina-storeconfig.jar,\
 catalina-tribes.jar,\
-catalina-ws.jar,\
 catalina.jar,\
 cglib-*.jar,\
 cobertura-*.jar,\
@@ -135,6 +134,7 @@ commons-lang*.jar,\
 commons-logging*.jar,\
 commons-math*.jar,\
 commons-pool*.jar,\
+derby-*.jar,\
 dom4j-*.jar,\
 easymock-*.jar,\
 ecj-*.jar,\
@@ -172,11 +172,7 @@ tagsoup-*.jar,\
 tomcat-api.jar,\
 tomcat-coyote.jar,\
 tomcat-dbcp.jar,\
-tomcat-i18n-en.jar,\
-tomcat-i18n-es.jar,\
-tomcat-i18n-fr.jar,\
-tomcat-i18n-ja.jar,\
-tomcat-i18n-ru.jar,\
+tomcat-i18n-*.jar,\
 tomcat-jdbc.jar,\
 tomcat-jni.jar,\
 tomcat-juli-adapters.jar,\
