--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -2,9 +2,9 @@
 # multi zookeeper & kafka cluster list
 # Settings prefixed with 'kafka.eagle.' will be deprecated, use 'efak.' instead
 ######################################
-efak.zk.cluster.alias=cluster1
+efak.zk.cluster.alias=cluster1,cluster2
 cluster1.zk.list=127.0.0.1:2181
-cluster2.zk.list=127.0.0.1:2181/plain
+cluster2.zk.list=127.0.0.1:2181/v23
 cluster3.zk.list=127.0.0.1:2181/scram
 cluster4.zk.list=127.0.0.1:2182
 
@@ -27,7 +27,7 @@ efak.kafka.cluster.alias=cluster1
 # broker size online list
 ######################################
 cluster1.efak.broker.size=10
-cluster1_0_1.efak.broker.size=10
+cluster2.efak.broker.size=10
 cluster4.efak.broker.size=10
 
 ######################################
@@ -73,6 +73,7 @@ cluster4.efak.offset.storage=kafka
 # kafka jmx uri
 ######################################
 cluster1.efak.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
+cluster2.efak.jmx.uri=service:jmx:rmi:///jndi/rmi://%s/jmxrmi
 
 
 ######################################
