--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -2,7 +2,7 @@
 # multi zookeeper & kafka cluster list
 # Settings prefixed with 'kafka.eagle.' will be deprecated, use 'efak.' instead
 ######################################
-efak.zk.cluster.alias=cluster1,cluster2
+efak.zk.cluster.alias=cluster1
 cluster1.zk.list=127.0.0.1:2181
 cluster2.zk.list=127.0.0.1:2181/v23
 cluster3.zk.list=127.0.0.1:2181/scram
@@ -44,7 +44,7 @@ efak.webui.port=8048
 # EFAK enable distributed
 ######################################
 efak.distributed.enable=false
-efak.cluster.mode.status=slave
+efak.cluster.mode.status=master
 efak.worknode.master.host=192.168.31.199
 #efak.worknode.master.host=192.168.31.127
 efak.worknode.port=8085
