--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -140,7 +140,7 @@ cluster1.efak.ssl.cgroup.topics=
 # kafka jdbc driver address
 ######################################
 efak.driver=com.mysql.cj.jdbc.Driver
-efak.url=jdbc:mysql://127.0.0.1:3306/ke_dev?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+efak.url=jdbc:mysql://127.0.0.1:3306/ke_prd?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 efak.username=root
 efak.password=123456
 #efak.driver=org.sqlite.JDBC
