--- a/efak-common/src/main/resources/system-config.properties
+++ b/efak-common/src/main/resources/system-config.properties
@@ -49,6 +49,7 @@ efak.worknode.master.host=192.168.31.133
 efak.worknode.port=8085
 efak.worknode.disable.cgroup=
 efak.worknode.address.path=/Users/dengjie/workspace/kafka-eagle-plus/efak-common/src/main/resources/works
+efak.runtime.env=dev
 
 ######################################
 # kafka jmx acl and ssl authenticate
