fixed ksql where condition

--- a/efak-web/pom.xml
+++ b/efak-web/pom.xml
@@ -42,6 +42,16 @@
             <groupId>org.smartloli.kafka.eagle</groupId>
             <artifactId>efak-common</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.smartloli.kafka.eagle</groupId>
