--- a/efak-web/src/main/resources/conf/system-config.properties
+++ b/efak-web/src/main/resources/conf/system-config.properties
@@ -122,7 +122,7 @@ cluster3.efak.ssl.cgroup.topics=
 # kafka mysql jdbc driver address
 ######################################
 efak.driver=com.mysql.cj.jdbc.Driver
-efak.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+efak.url=jdbc:mysql://127.0.0.1:3306/ke?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=Asia/Shanghai
 efak.username=root
 efak.password=123456
 
