--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.web.resources.static-locations= classpath:/statics/, classpath:/templates/
 server.port=8080
+
+# set default language
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
+spring.web.locale=zh_CN
+spring.web.locale-resolver=fixed
