--- a/efak-ai/pom.xml
+++ b/efak-ai/pom.xml
@@ -18,10 +18,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
+            <groupId>org.kafka.eagle</groupId>
+            <artifactId>efak-common</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
