--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.web.locale-resolver=fixed
 # set mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ke
 spring.datasource.username=root
-spring.datasource.password=admin123
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
