--- a/efak-web/pom.xml
+++ b/efak-web/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>efak-ai</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
