--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 spring.web.resources.static-locations= classpath:/statics/, classpath:/templates/
 server.port=8080
 
+# spring plugins
+spring.aop.proxy-target-class=true
+spring.main.allow-bean-definition-overriding=true
+
 # set default language
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
@@ -11,6 +15,6 @@ spring.web.locale-resolver=fixed
 # set mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ke
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
