add: update broker info

--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -1,20 +1,20 @@
 # set statics resources and http port
-spring.web.resources.static-locations= classpath:/statics/, classpath:/templates/
+spring.web.resources.static-locations=classpath:/statics/, classpath:/templates/
 server.port=8080
-
 # spring plugins
 spring.aop.proxy-target-class=true
 spring.main.allow-bean-definition-overriding=true
-
 # set default language
 spring.messages.basename=i18n/messages
 spring.messages.encoding=UTF-8
 spring.web.locale=zh_CN
 spring.web.locale-resolver=fixed
-
 # set mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/ke
 spring.datasource.username=root
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# mybatis-plus debug log
+mybatis-plus.global-config.db-config.id-type=auto
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
