--- a/efak-common/pom.xml
+++ b/efak-common/pom.xml
@@ -76,5 +76,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>5.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.13</artifactId>
+            <version>3.4.0</version>
+        </dependency>
+
     </dependencies>
 </project>
