add test acl by user

--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 # set statics resources and http port
+spring.main.allow-circular-references=true
 spring.web.resources.static-locations=classpath:/statics/, classpath:/templates/
 server.port=8080
 # spring plugins
