add: collect topic data

--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 spring.main.allow-circular-references=true
 spring.web.resources.static-locations=classpath:/statics/, classpath:/templates/
 server.port=8080
+# efak collect data retain time
+efak.collect.retain=30
 # spring plugins
 spring.aop.proxy-target-class=true
 spring.main.allow-bean-definition-overriding=true
