--- a/efak-common/pom.xml
+++ b/efak-common/pom.xml
@@ -99,6 +99,10 @@
             <artifactId>kafka_2.13</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
     </dependencies>
 </project>
