feat: add quartz job

--- a/efak-web/src/main/resources/application.properties
+++ b/efak-web/src/main/resources/application.properties
@@ -21,3 +21,18 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis-plus.global-config.db-config.id-type=auto
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
+# config quartz schudler task
+org.quartz.jobStore.useProperties=false
+org.quartz.jobStore.tablePrefix=QRTZ_
+org.quartz.jobStore.isClustered=true
+org.quartz.jobStore.clusterCheckinInterval=5000
+org.quartz.jobStore.misfireThreshold=60000
+org.quartz.jobStore.txIsolationLevelReadCommitted=true
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.scheduler.instanceName=ClusterQuartz
+org.quartz.scheduler.instanceId=AUTO
+org.quartz.scheduler.rmi.export=false
+org.quartz.scheduler.rmi.proxy=false
+org.quartz.scheduler.wrapJobExecutionInUserTransaction=false
+
