--- a/efak-plugins/pom.xml
+++ b/efak-plugins/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.kafka.eagle</groupId>
         <artifactId>efak</artifactId>
-        <version>${project.version}</version>
+        <version>${kafka.eagle.version}</version>
     </parent>
 
     <artifactId>efak-plugins</artifactId>
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>org.kafka.eagle</groupId>
             <artifactId>efak-common</artifactId>
-            <version>${project.version}</version>
+            <version>${kafka.eagle.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kafka.eagle</groupId>
             <artifactId>efak-pojo</artifactId>
-            <version>${project.version}</version>
+            <version>${kafka.eagle.version}</version>
         </dependency>
     </dependencies>
 </project>
