--- a/efak-common/pom.xml
+++ b/efak-common/pom.xml
@@ -7,6 +7,7 @@
         <version>${kafka.eagle.version}</version>
     </parent>
     <artifactId>efak-common</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
