--- a/efak-web/src/main/resources/config/application.properties
+++ b/efak-web/src/main/resources/config/application.properties
@@ -18,8 +18,8 @@ spring.datasource.username=root
 spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # mybatis-plus debug log
-mybatis-plus.global-config.db-config.id-type=auto
-mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus.global-config.db-config.id-type=auto
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 spring.jackson.time-zone=GMT+8
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
