--- a/efak-pojo/pom.xml
+++ b/efak-pojo/pom.xml
@@ -8,6 +8,7 @@
     </parent>
 
     <artifactId>efak-pojo</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
