--- a/efak-tool/pom.xml
+++ b/efak-tool/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.kafka.eagle</groupId>
         <artifactId>efak</artifactId>
-        <version>${kafka.eagle.version}</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>efak-tool</artifactId>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.kafka.eagle</groupId>
             <artifactId>efak-dto</artifactId>
-            <version>${kafka.eagle.version}</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
