--- a/efak-dto/pom.xml
+++ b/efak-dto/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.kafka.eagle</groupId>
         <artifactId>efak</artifactId>
-        <version>${kafka.eagle.version}</version>
+        <version>5.0.0</version>
     </parent>
 
     <artifactId>efak-dto</artifactId>
